src/sass/app/components/account_transfer.scss
.transfer_form {
    background-color: $COLOR_WHITE;
    display: flex;
    justify-content: space-between;
    width: 100%;
    margin-bottom: 30px;
    flex-wrap: wrap-reverse;

    p {
        margin: 0 0 6px;
    }
    #transfer_to_select.form-row {
        padding-top: 0;
        padding-bottom: 0;
    }
    > div {
        box-sizing: border-box;
    }
    &__left_pane {
        padding: 30px;
        width: 50%;
        min-height: 266px;
        background-color: $COLOR_LIGHT_GRAY;
        color: $COLOR_BLACK;
    }
    &__right_pane {
        padding: 30px;
        width: 50%;
        min-height: 266px;
        border: 1px solid $COLOR_LIGHT_GRAY;
        border-left: 0;

        &__input_group {
            width: 100%;

            &__prefix {
                display: flex;
                flex-wrap: wrap;
                max-width: 280px;

                .input-add-on {
                    display: inline-flex;
                    height: 28px;
                    width: 46px;
                    align-items: center;
                    justify-content: center;
                }
                input {
                    margin: 0;
                    padding: 0 0 0 5px;
                    height: 28px;
                    max-width: 100%;
                    width: 232px;
                    box-sizing: border-box;
                }
            }
            .select {
                width: 100%;
            }
        }
        & .select {
            width: 280px !important;
            display: block;
            margin-bottom: 2px;
        }
    }
}

@media screen and (max-width: 480px) {
    .transfer_form {
        &__right_pane, &__left_pane {
            width: 100%;
        }
    }
}

.account_transfer {
    width: 250px;

    &__header {
        padding: 5px !important;
        font-size: smaller !important;
    }
}

.account_transfer-content {
    .hint {
        font-size: 15px;
    }
    .italic {
        font-style: italic;
    }
}

